# dir_diff

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/diff_lib/: comparsion_source.rs  file_infomation.rs  mod.rs
test/source/: test_error.txt  word_sample.docx
