[package]
name = "dir_diff"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.6"
clap = { version = "4.0.32", features = ["derive"] }
futures = "0.3.17"
tokio = { version = "1.35", features = ["full"] }
